RESOLVED FIXED59347
Fix PassOwnPtr issues in Structure and JSGlobalData.cpp
https://bugs.webkit.org/show_bug.cgi?id=59347
Summary Fix PassOwnPtr issues in Structure and JSGlobalData.cpp
David Levin
Reported 2011-04-25 14:44:34 PDT
Fix PassOwnPtr issues in Structure and JSGlobalData.cpp
Attachments
Patch (3.52 KB, patch)
2011-04-25 14:44 PDT, David Levin
abarth: review+
David Levin
Comment 1 2011-04-25 14:44:56 PDT
David Levin
Comment 2 2011-04-25 14:49:50 PDT
Note You need to log in before you can comment on or make changes to this bug.