Fix PassOwnPtr issues in Structure and JSGlobalData.cpp https://bugs.webkit.org/show_bug.cgi?id=59347

Reviewed by Adam Barth.

* runtime/JSGlobalData.cpp:
(JSC::JSGlobalData::JSGlobalData):
* runtime/Structure.cpp:
(JSC::Structure::copyPropertyTable):
(JSC::Structure::createPropertyMap):
* runtime/Structure.h:

Canonical link: https://commits.webkit.org/74531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84804 268f45cc-cd09-0410-ab3c-d52691b4dbfc